k8s/web-django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-web-django-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-django
  template:
    metadata:
      labels:
        app: web-django
        component: web
    spec:
      containers:
      - name: web-django-container
        image: web_django:latest
        imagePullPolicy: Never
        ports: 
          - containerPort: 80
