k8s/web-django-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: web-django-service
spec:
  type: LoadBalancer
  selector:
    app: web-django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
