k8s/web-django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-django-service
spec:
  type: ClusterIP
  selector:
    app: web-django
    component: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
